chore(Sonar): Fix sonar